syntax = "proto3";

package proto;

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message StoreDataRequest {
  string key = 1;
  string type = 2;
  bytes data = 3;
}

message StoreDataResponse {}

message GetDataRequest {
  string key = 1;
  string type = 2;
  string identifier = 3;
}

message GetDataResponse {
  repeated Data data = 1;
}

message UpdateDataRequest {
  string key = 1;
  string type = 2;
  string identifier = 3;
  bytes new_data = 4;
}

message UpdateDataResponse {}

message DeleteDataRequest {
  string key = 1;
  string type = 2;
  string identifier = 3;
}

message DeleteDataResponse {}

message Data {
  uint32 id = 1;
  string type = 2;
  bytes data = 3;
  string key = 4;
}


service GophKeeper {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc StoreData(StoreDataRequest) returns (StoreDataResponse);
  rpc GetData(GetDataRequest) returns (GetDataResponse);
  rpc UpdateData(UpdateDataRequest) returns (UpdateDataResponse);
  rpc DeleteData(DeleteDataRequest) returns (DeleteDataResponse);
}